ghc-6.2/hslibs/win32/Win32Window_stub_ffi.h

extern LPCTSTR prim_mkClassName(char * arg1);
extern UINT prim_cS_VREDRAW();
extern UINT prim_cS_HREDRAW();
extern UINT prim_cS_OWNDC();
extern UINT prim_cS_CLASSDC();
extern UINT prim_cS_PARENTDC();
extern UINT prim_cS_SAVEBITS();
extern UINT prim_cS_DBLCLKS();
extern UINT prim_cS_BYTEALIGNCLIENT();
extern UINT prim_cS_BYTEALIGNWINDOW();
extern UINT prim_cS_NOCLOSE();
extern UINT prim_cS_GLOBALCLASS();
extern void* prim_marshall_wndClass_(UINT style,HINSTANCE hInstance,HICON hIcon,HCURSOR hCursor,HBRUSH hbrBackground,LPCTSTR lpszMenuName,LPCTSTR lpszClassName);
extern WNDCLASS* access_prim_marshall_wndClass__c(HsPtr);
extern int access_prim_marshall_wndClass__gc_failed(HsPtr);
extern void* access_prim_marshall_wndClass__gc_failstring(HsPtr);
extern ATOM prim_registerClass(WNDCLASS * arg1);
extern void prim_unregisterClass(LPCTSTR arg1,HINSTANCE arg2);
extern DWORD prim_wS_OVERLAPPED();
extern DWORD prim_wS_POPUP();
extern DWORD prim_wS_CHILD();
extern DWORD prim_wS_CLIPSIBLINGS();
extern DWORD prim_wS_CLIPCHILDREN();
extern DWORD prim_wS_VISIBLE();
extern DWORD prim_wS_DISABLED();
extern DWORD prim_wS_MINIMIZE();
extern DWORD prim_wS_MAXIMIZE();
extern DWORD prim_wS_CAPTION();
extern DWORD prim_wS_BORDER();
extern DWORD prim_wS_DLGFRAME();
extern DWORD prim_wS_VSCROLL();
extern DWORD prim_wS_HSCROLL();
extern DWORD prim_wS_SYSMENU();
extern DWORD prim_wS_THICKFRAME();
extern DWORD prim_wS_MINIMIZEBOX();
extern DWORD prim_wS_MAXIMIZEBOX();
extern DWORD prim_wS_GROUP();
extern DWORD prim_wS_TABSTOP();
extern DWORD prim_wS_OVERLAPPEDWINDOW();
extern DWORD prim_wS_POPUPWINDOW();
extern DWORD prim_wS_CHILDWINDOW();
extern DWORD prim_wS_TILED();
extern DWORD prim_wS_ICONIC();
extern DWORD prim_wS_SIZEBOX();
extern DWORD prim_wS_TILEDWINDOW();
extern DWORD prim_wS_EX_DLGMODALFRAME();
extern DWORD prim_wS_EX_NOPARENTNOTIFY();
extern DWORD prim_wS_EX_TOPMOST();
extern DWORD prim_wS_EX_ACCEPTFILES();
extern DWORD prim_wS_EX_TRANSPARENT();
extern DWORD prim_wS_EX_MDICHILD();
extern DWORD prim_wS_EX_TOOLWINDOW();
extern DWORD prim_wS_EX_WINDOWEDGE();
extern DWORD prim_wS_EX_CLIENTEDGE();
extern DWORD prim_wS_EX_CONTEXTHELP();
extern DWORD prim_wS_EX_RIGHT();
extern DWORD prim_wS_EX_LEFT();
extern DWORD prim_wS_EX_RTLREADING();
extern DWORD prim_wS_EX_LTRREADING();
extern DWORD prim_wS_EX_LEFTSCROLLBAR();
extern DWORD prim_wS_EX_RIGHTSCROLLBAR();
extern DWORD prim_wS_EX_CONTROLPARENT();
extern DWORD prim_wS_EX_STATICEDGE();
extern DWORD prim_wS_EX_APPWINDOW();
extern DWORD prim_wS_EX_OVERLAPPEDWINDOW();
extern DWORD prim_wS_EX_PALETTEWINDOW();
extern int prim_cW_USEDEFAULT();
extern void prim_setWindowClosure(HWND hwnd,void * closure);