ghc-6.2/hslibs/win32/Win32Window.hs

module Win32Window where

import StdDIS
import Win32Types
import GDITypes
import Win32WinMessage
import Addr
import Foreign.ForeignPtr
import Foreign.Ptr ( castFunPtrToPtr )

----------------------------------------------------------------
-- Window Class
----------------------------------------------------------------

-- The classname must not be deallocated until the corresponding class
-- is deallocated.  For this reason, we represent classnames by pointers
-- and explicitly allocate the className.

type ClassName   = LPCTSTR

-- Note: this is one of those rare functions which doesnt free all 
-- its String arguments.
mkClassName :: String -> ClassName
mkClassName gc_arg1 =
  unsafePerformIO(
    (marshall_string_ gc_arg1) >>= \ (arg1) ->
    prim_mkClassName arg1
    >>= \  gc_res1  ->
    (return (gc_res1)))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_mkClassName" prim_mkClassName :: Addr -> IO (Addr)

type ClassStyle   = UINT

foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_cS_VREDRAW" cS_VREDRAW :: ClassStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_cS_HREDRAW" cS_HREDRAW :: ClassStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_cS_OWNDC"   cS_OWNDC   :: ClassStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_cS_CLASSDC" cS_CLASSDC :: ClassStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_cS_PARENTDC" cS_PARENTDC :: ClassStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_cS_SAVEBITS" cS_SAVEBITS :: ClassStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_cS_DBLCLKS"  cS_DBLCLKS :: ClassStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_cS_BYTEALIGNCLIENT" cS_BYTEALIGNCLIENT :: ClassStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_cS_BYTEALIGNWINDOW" cS_BYTEALIGNWINDOW :: ClassStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_cS_NOCLOSE" cS_NOCLOSE :: ClassStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_cS_GLOBALCLASS" cS_GLOBALCLASS :: ClassStyle

type WNDCLASS =
 (ClassStyle,  -- style
  HINSTANCE,   -- hInstance
  MbHICON,     -- hIcon
  MbHCURSOR,   -- hCursor
  MbHBRUSH,    -- hbrBackground
  MbLPCSTR,    -- lpszMenuName
  ClassName)   -- lpszClassName

--ToDo!
--To avoid confusion with NULL, WNDCLASS requires you to add 1 to a SystemColor
--(which can be NULL)
-- %fun mkMbHBRUSH :: SystemColor -> MbHBRUSH
-- %code
-- %result ((HBRUSH)($0+1));

marshall_wndClass_ :: WNDCLASS -> IO Addr
marshall_wndClass_ gc_arg1 =
  case gc_arg1 of { (style,hInstance,hIcon,hCursor,hbrBackground,lpszMenuName,lpszClassName) ->
  (case hIcon of {
      Nothing -> (return (nullHANDLE));
      (Just hIcon) -> (return ((hIcon)))
   }) >>= \ (hIcon) ->
  (case hCursor of {
      Nothing -> (return (nullHANDLE));
      (Just hCursor) -> (return ((hCursor)))
   }) >>= \ (hCursor) ->
  (case hbrBackground of {
      Nothing -> (return (nullHANDLE));
      (Just hbrBackground) -> (return ((hbrBackground)))
   }) >>= \ (hbrBackground) ->
  (case lpszMenuName of {
      Nothing -> (return (nullAddr));
      (Just lpszMenuName) -> (return ((lpszMenuName)))
   }) >>= \ (lpszMenuName) ->
  prim_marshall_wndClass_ style hInstance hIcon hCursor hbrBackground lpszMenuName lpszClassName
  >>= \ gc_result ->
  access_prim_marshall_wndClass__c (gc_result :: Addr) >>= \ c ->
  access_prim_marshall_wndClass__gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_marshall_wndClass__gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (c))}
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_marshall_wndClass_" prim_marshall_wndClass_ :: Word32 -> Addr -> Addr -> Addr -> Addr -> Addr -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_marshall_wndClass__c :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_marshall_wndClass__gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_marshall_wndClass__gc_failstring :: Addr -> IO (Addr)


registerClass :: WNDCLASS -> IO MbATOM
registerClass gc_arg1 =
  (marshall_wndClass_ gc_arg1) >>= \ (arg1) ->
  prim_registerClass arg1
  >>= \  res1  ->
  (if 0 == (res1)
   then return Nothing
   else (return ((Just res1)))) >>= \ gc_res1 ->
  (return (gc_res1))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_registerClass" prim_registerClass :: Addr -> IO (Word32)

unregisterClass :: ClassName -> HINSTANCE -> IO ()
unregisterClass arg1 arg2 =
  prim_unregisterClass arg1 arg2
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_unregisterClass" prim_unregisterClass :: Addr -> Addr -> IO ()

----------------------------------------------------------------
-- Window Style
----------------------------------------------------------------

type WindowStyle   = DWORD

foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_OVERLAPPED" wS_OVERLAPPED :: WindowStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_POPUP" wS_POPUP :: WindowStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_CHILD" wS_CHILD :: WindowStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_CLIPSIBLINGS" wS_CLIPSIBLINGS :: WindowStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_CLIPCHILDREN" wS_CLIPCHILDREN :: WindowStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_VISIBLE" wS_VISIBLE :: WindowStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_DISABLED" wS_DISABLED :: WindowStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_MINIMIZE" wS_MINIMIZE :: WindowStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_MAXIMIZE" wS_MAXIMIZE :: WindowStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_CAPTION"  wS_CAPTION :: WindowStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_BORDER"   wS_BORDER :: WindowStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_DLGFRAME" wS_DLGFRAME :: WindowStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_VSCROLL"  wS_VSCROLL :: WindowStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_HSCROLL"  wS_HSCROLL :: WindowStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_SYSMENU"  wS_SYSMENU :: WindowStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_THICKFRAME" wS_THICKFRAME :: WindowStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_MINIMIZEBOX" wS_MINIMIZEBOX :: WindowStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_MAXIMIZEBOX" wS_MAXIMIZEBOX :: WindowStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_GROUP" wS_GROUP :: WindowStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_TABSTOP" wS_TABSTOP :: WindowStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_OVERLAPPEDWINDOW" wS_OVERLAPPEDWINDOW :: WindowStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_POPUPWINDOW" wS_POPUPWINDOW :: WindowStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_CHILDWINDOW" wS_CHILDWINDOW :: WindowStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_TILED" wS_TILED :: WindowStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_ICONIC" wS_ICONIC :: WindowStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_SIZEBOX" wS_SIZEBOX :: WindowStyle
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_TILEDWINDOW" wS_TILEDWINDOW :: WindowStyle

type WindowStyleEx   = DWORD

foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_EX_DLGMODALFRAME" wS_EX_DLGMODALFRAME :: WindowStyleEx
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_EX_NOPARENTNOTIFY" wS_EX_NOPARENTNOTIFY :: WindowStyleEx
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_EX_TOPMOST" wS_EX_TOPMOST :: WindowStyleEx
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_EX_ACCEPTFILES" wS_EX_ACCEPTFILES :: WindowStyleEx
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_EX_TRANSPARENT" wS_EX_TRANSPARENT :: WindowStyleEx
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_EX_MDICHILD" wS_EX_MDICHILD :: WindowStyleEx
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_EX_TOOLWINDOW" wS_EX_TOOLWINDOW :: WindowStyleEx
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_EX_WINDOWEDGE" wS_EX_WINDOWEDGE :: WindowStyleEx
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_EX_CLIENTEDGE" wS_EX_CLIENTEDGE :: WindowStyleEx
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_EX_CONTEXTHELP" wS_EX_CONTEXTHELP :: WindowStyleEx
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_EX_RIGHT" wS_EX_RIGHT :: WindowStyleEx
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_EX_LEFT"  wS_EX_LEFT :: WindowStyleEx
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_EX_RTLREADING" wS_EX_RTLREADING :: WindowStyleEx
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_EX_LTRREADING" wS_EX_LTRREADING :: WindowStyleEx
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_EX_LEFTSCROLLBAR" wS_EX_LEFTSCROLLBAR :: WindowStyleEx
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_EX_RIGHTSCROLLBAR" wS_EX_RIGHTSCROLLBAR :: WindowStyleEx
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_EX_CONTROLPARENT" wS_EX_CONTROLPARENT :: WindowStyleEx
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_EX_STATICEDGE" wS_EX_STATICEDGE :: WindowStyleEx
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_EX_APPWINDOW" wS_EX_APPWINDOW :: WindowStyleEx
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_EX_OVERLAPPEDWINDOW" wS_EX_OVERLAPPEDWINDOW :: WindowStyleEx
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_wS_EX_PALETTEWINDOW" wS_EX_PALETTEWINDOW :: WindowStyleEx

type Pos = Int
type MbPos = Maybe Pos
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_cW_USEDEFAULT" cW_USEDEFAULT :: Pos

type WindowClosure = HWND -> WindowMessage -> WPARAM -> LPARAM -> IO LRESULT

type WindowClosure_FFI = Ptr () -> WindowMessage -> WPARAM -> LPARAM -> IO LRESULT

 
marshall_windowClosure_ :: WindowClosure -> IO (FunPtr WindowClosure)
marshall_windowClosure_ cl = mkWindowClosure (\ x -> cl (ptrToAddr x))

foreign import ccall "wrapper" mkWindowClosure :: WindowClosure_FFI -> IO (FunPtr WindowClosure)


setWindowClosure :: HWND -> WindowClosure -> IO ()
setWindowClosure hwnd gc_arg1 =
  (marshall_windowClosure_ gc_arg1) >>= \ (closure) ->
  prim_setWindowClosure hwnd closure
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_setWindowClosure" prim_setWindowClosure :: Addr -> FunPtr WindowClosure -> IO ()
